# SimpleEngine

./: .color_coded  .gitmodules  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.py  rebuild.py
doc/: Dependency.txt
scripts/: Dependency.sh
source/: CMakeLists.txt  Command.cpp  Command.h  Component.h  Engine.h  Game.cpp  Game.h  Main.cpp  Math.h  Table.h
source/Command/: Exit.cpp  Exit.h  PlayerBackward.cpp  PlayerBackward.h  PlayerForward.cpp  PlayerForward.h  PlayerLeft.cpp  PlayerLeft.h  PlayerOverviewStart.cpp  PlayerOverviewStart.h  PlayerOverviewStop.cpp  PlayerOverviewStop.h  PlayerRight.cpp  PlayerRight.h  PlayerRotation.cpp  PlayerRotation.h  Test.cpp  Test.h
source/Component/: Mesh.cpp  Mesh.h  Move.cpp  Move.h  Transform3D.cpp  Transform3D.h
source/Engine/: Alias.h  Constant.h  Forward.h  Logger.h
source/Game/: State.h
source/Manager/: Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
source/Math/: Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
source/Math/Matrix2x2/: Function.h  Operator.h
source/Math/Matrix3x3/: Function.h  Operator.h
source/Math/Matrix4x4/: Function.h  Operator.h
source/Math/Quaternion/: Function.h  Operator.h
source/Math/Vector2/: Function.h  Operator.h
source/Math/Vector3/: Function.h  Operator.h
source/Math/Vector4/: Function.h  Operator.h
source/System/: Input.cpp  Input.h  Movement.cpp  Movement.h  Render.cpp  Render.h  Scene.cpp  Scene.h  Window.cpp  Window.h  World.cpp  World.h
source/System/Input/: Button.h  Key.h  State.h
source/System/Render/: Camera.cpp  Camera.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Primitive.cpp  Primitive.h
source/System/Render/Backend/OpenGL/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
source/System/Render/Backend/OpenGL/GLSL/: Mesh.fs  Mesh.vs
source/System/Render/Backend/OpenGL/Shader/: Mesh.cpp  Mesh.h
source/System/Render/Camera/: FPS.cpp  FPS.h  Follow.cpp  Follow.h  Orbit.cpp  Orbit.h
source/System/Render/Technique/: Mesh.cpp  Mesh.h
source/Utility/: Base64.cpp  Base64.h  GLTF2.cpp  GLTF2.h  Image.cpp  Image.h
source/Utility/GLTF2/: Accessor.cpp  Accessor.h  Animation.cpp  Animation.h  Asset.cpp  Asset.h  Buffer.h  BufferView.cpp  BufferView.h  Camera.h  Image.h  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Sampler.h  Scene.h  Skin.h  Texture.h
test/: CMakeLists.txt
test/Math/: Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
test/Math/Matrix2x2/: Function.cpp  Operator.cpp
test/Math/Matrix3x3/: Function.cpp  Operator.cpp
test/Math/Matrix4x4/: Function.cpp  Operator.cpp
test/Math/Quaternion/: Function.cpp  Operator.cpp
test/Math/Vector2/: Function.cpp  Operator.cpp
test/Math/Vector3/: Function.cpp  Operator.cpp
test/Math/Vector4/: Function.cpp  Operator.cpp
